# Archmorph

./: .coverage  .editorconfig  .env.example  .gitattributes  .gitignore  .gitleaksignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DAILY_ISSUES_REPORT.md  DEPLOY_TRIGGER.md  LICENSE  Makefile  README.md  SECURITY.md  application-flow.excalidraw  architecture.excalidraw  docker-compose.dev.yml  docker-compose.parity.yml  docker-compose.yml  doit.py  package-lock.json  package.json  patch_format_config.py  playwright.config.ts  test_fastapi.db  update_changelog.py  update_prd.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  SECRETS.md  copilot-instructions-ciso.md  dependabot.yml  labeler.yml  pull_request_template.md  release.yml
backend/: .azureignore  .coverage  .coveragerc  .dockerignore  .env.example  Dockerfile  admin_auth.py  agent_tools.py  ai_suggestion.py  alembic.ini  alz_profile.py  analysis_history.py  analysis_payload_bounds.py  analytics.py  api_v1_mirror_exemptions.json  api_versioning.py  append_test.py  architecture_diff.py  architecture_package.py  audit_logging.py  auth.py  azure_landing_zone.py  azure_landing_zone_schema.py  best_practices.py  chatbot.py  check_openapi_contract.py  ci_smoke.py  circuit_breakers.py  codeql_locations.json  compliance_mapper.py  confidence_provenance.py  cost_assumptions.py  cost_metering.py  cost_optimizer.py  csrf.py  (+99 more)
cli/: README.md  archmorph_cli.py  pyproject.toml
cli/tests/: test_archmorph_cli_http_smoke.py  test_archmorph_cli_run.py
(+801 files in other folders)
