[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "archmorph-cli"
version = "1.0.0"
description = "CLI for the Archmorph Cloud Architecture Translator API"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [{name = "Archmorph Team"}]
keywords = ["archmorph", "cloud", "architecture", "azure", "cli", "iac", "terraform", "bicep"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Systems Administration",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "tabulate>=0.9",
]

[project.scripts]
archmorph = "archmorph_cli:main"

[project.urls]
Homepage = "https://archmorphai.com"
Repository = "https://github.com/archmorph/archmorph"

[tool.setuptools]
py-modules = ["archmorph_cli"]
